# Projeto-Multa

./: ExtrairDados.py  Leitor_Final.py  README.md  pyproject.toml
